Added ping waves. Generating a double time click and twice as many beats per measure than necessary.

--- a/Clicker/Clicker.csproj
+++ b/Clicker/Clicker.csproj
@@ -59,6 +59,14 @@
       <Name>Sanford.Multimedia.Midi</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="pinghi48k16b.raw">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="pinglo48k16b.raw">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
